<resources>
    <string name="app_name">ударЯшка</string>
    <string name="question">Сыграем в ударЯшку?</string>
    <string name="single_game_mode">Проверка</string>
    <string name="multiple_game_mode">Выбор</string>
    <string name="ege_mode">Режим ЕГЭ</string>
    <string name="contact">Связаться с разработчиками</string>
    <string name="settings">Настройки</string>
    <string name="sett">Н</string>
    <string name="back">Вернуться</string>
    <string name="counter_init">0</string>
    <string name="mistakes">Ошибки</string>
    <string name="rightAns">Верно</string>
    <string name="level">Уровень</string>
    <string name="finish">Завершить</string>
    <string name="developersTitle">Разработчики</string>
    <string name="dev1">Арина Кузнецова</string>
    <string name="dev2">Артемий Быков</string>
    <string name="copyright">2019, Все права защищены</string>
    <string name="dev3">Михаил Ткаченко</string>
    <string name="level_init">3</string>
    <string name="in_a_row">Подряд</string>
    <string name="choose_wrong">Выберите неправильное ударение</string>
    <string name="advertisement">Реклама</string>
    <string name="results">Результаты</string>
    <string name="stats">Статистика</string>
    <string name="wholeSet">Всего</string>
    <string name="avgTime">Среднее время</string>
    <string name="bestTime">Лучшее время</string>
    <string name="quest">Вопрос 1</string>
    <string name="correct">Верно</string>
    <string name="slOvo">слОво</string>
    <string name="your_answer">Ваш ответ</string>
    <string name="correct_answer">Верный ответ</string>
    <string name="correct_accent">Правильное ударение</string>
    <string name="loading">Загрузка...</string>

    <string name="appID">ca-app-pub-2753151843787409~3244524218</string>
    <string name="appBannerID">ca-app-pub-2753151843787409/6527618518</string>
    <string name="instructions">Инструкции</string>
    <string name="appInterstitalID">ca-app-pub-2753151843787409/9700576768</string>
    <string name="instruction">Инструкция</string>
    <string name="doIfCorrect">Делай свайп вправо, если считаешь, что ударение в слове указано верно.</string>
    <string name="ok">Понятно</string>
    <string name="IfIncorrect">Делай свайп влево, если в ударении допущена ошибка.</string>
</resources>