<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/windowMultiple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_marginTopPercent="5%"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/level"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/roudedrec"
            android:gravity="center|bottom"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:singleLine="true"
            android:text="@string/level_init"
            android:textColor="@color/colorAccent"
            android:textSize="35sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/question"
            android:layout_width="128dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@+id/level"
            android:background="@drawable/roudedrec"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/choose_wrong"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inARow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/question"
            android:background="@drawable/roudedrec"
            android:gravity="center|bottom"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/counter_init"
            android:textColor="@color/colorAccent"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/level"
            android:layout_alignTop="@+id/level"
            android:layout_alignEnd="@+id/level"
            android:layout_alignBottom="@+id/level"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/level"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/inARow"
            android:layout_alignTop="@+id/inARow"
            android:layout_alignEnd="@+id/inARow"
            android:layout_alignBottom="@+id/inARow"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/in_a_row"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />

    </android.support.percent.PercentRelativeLayout>

    <ListView
        android:divider="@color/colorAccent"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        app:layout_heightPercent="65%"
        android:id="@+id/choiceModeWords"
        app:layout_marginTopPercent="1%"
        tools:listitem="@layout/multiple_mode_word"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/finishMultiple"
        android:layout_below="@id/choiceModeWords"
        app:layout_widthPercent="55%"
        android:layout_height="60dp"
        app:layout_marginTopPercent="3%"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roudedrec"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />


</android.support.percent.PercentRelativeLayout>