<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settTextView"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        app:layout_marginTopPercent="7%"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roudedrec"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:singleLine="true"
        android:text="@string/results"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/firstRow"
        android:layout_below="@id/settTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_marginTopPercent="7%"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/mistakesCounterField"
            app:layout_marginRightPercent="15%"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/roudedrec"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/wholeSetSizeField">

            <TextView
                android:id="@+id/mistakesText"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_alignTop="@+id/mistakesCounter"
                android:gravity="center"
                android:text="@string/mistakes"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mistakesCounter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/counter_init"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/helvetica" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wholeSetSizeField"
            android:layout_height="80dp"
            android:layout_width="80dp"
            android:background="@drawable/roudedrec"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/wholeSetSizeText"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_alignTop="@+id/wholeSetSize"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/wholeSet"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wholeSetSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:text="@string/counter_init"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/helvetica" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/correctCounterField"
            android:layout_toEndOf="@+id/wholeSetSizeField"
            app:layout_marginLeftPercent="15%"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:background="@drawable/roudedrec">

            <TextView
                android:id="@+id/correctText"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:gravity="center"
                android:text="@string/rightAns"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/correctCounter"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/counter_init"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:fontFamily="@font/helvetica" />

        </RelativeLayout>

    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/timeRow"
        android:layout_above="@id/statsSingle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">


        <TextView
            android:id="@+id/bestTime"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:background="@drawable/roudedrec"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="2dp"
            android:scaleType="fitCenter"
            android:singleLine="true"
            android:text="@string/counter_init"
            android:textColor="@color/colorAccent"
            android:textSize="27sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:fontFamily="@font/helvetica" />

        <TextView
            android:id="@+id/avgTime"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/bestTime"
            android:background="@drawable/roudedrec"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="2dp"
            android:scaleType="fitCenter"
            android:text="@string/counter_init"
            android:textColor="@color/colorAccent"
            android:textSize="27sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:fontFamily="@font/helvetica"
            app:layout_marginLeftPercent="20%" />

        <TextView
            android:id="@+id/bestTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bestTime"
            android:layout_alignTop="@+id/bestTime"
            android:layout_alignEnd="@+id/bestTime"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/bestTime"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avgTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/avgTime"
            android:layout_alignTop="@+id/avgTime"
            android:layout_alignEnd="@+id/avgTime"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/avgTime"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />


    </android.support.percent.PercentRelativeLayout>

    <Button
        android:layout_centerHorizontal="true"
        android:layout_above="@id/toMainButton"
        app:layout_marginBottomPercent="3%"
        android:id="@+id/statsSingle"
        app:layout_widthPercent="55%"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roudedrec"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/stats"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />

    <Button
        android:id="@+id/toMainButton"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:layout_marginBottomPercent="10%"
        app:layout_widthPercent="55%"
        android:layout_height="60dp"
        android:background="@drawable/roudedrec"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />

</android.support.percent.PercentRelativeLayout>