<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp">


        <ImageButton
            android:id="@+id/settings"
            android:src="@drawable/gear"
            android:tint="@color/colorAccent"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="150dp"
            android:background="@drawable/roudedrec"
            android:scaleType="fitCenter"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:textSize="40sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="165dp"
        android:text="@string/question"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/buttonMultipleMode"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/multiple_game_mode"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/roudedrec" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/dot1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dot"
            android:paddingLeft="50dp"
            android:scaleType="fitCenter"
            android:singleLine="true"
            android:layout_alignParentStart="true"
            android:paddingStart="50dp" />

        <TextView
            android:id="@+id/dot2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/dot"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scaleType="fitCenter" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonSingleMode"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/single_game_mode"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/roudedrec" />

</LinearLayout>